--- a/index.ipynb
+++ b/index.ipynb
@@ -28,16 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'fork-and-fig-albuquerque', 'name': 'Fork & Fig', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/_-DpXKfS3jv6DyA47g6Fxg/o.jpg', 'is_closed': False, 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ', 'review_count': 610, 'categories': [{'alias': 'burgers', 'title': 'Burgers'}, {'alias': 'sandwiches', 'title': 'Sandwiches'}, {'alias': 'salad', 'title': 'Salad'}], 'rating': 4.5, 'coordinates': {'latitude': 35.10871, 'longitude': -106.56739}, 'transactions': [], 'price': '$$', 'location': {'address1': '6904 Menaul Blvd NE', 'address2': 'Ste C', 'address3': '', 'city': 'Albuquerque', 'zip_code': '87110', 'country': 'US', 'state': 'NM', 'display_address': ['6904 Menaul Blvd NE', 'Ste C', 'Albuquerque, NM 87110']}, 'phone': '+15058815293', 'display_phone': '(505) 881-5293', 'distance': 3571.724649307866}\n"
+     ]
+    }
+   ],
    "source": [
-    "from restaurants import yelp_restaurants # in this line we are simply importing our data we gathered from Yelp."
+    "from restaurants import yelp_restaurants \n",
+    "# in this line we are simply importing our data we gathered from Yelp.\n",
+    "print(yelp_restaurants[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,53 +67,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'is_closed': False,\n",
-       "  'name': 'Fork & Fig',\n",
+       "[{'name': 'Fork & Fig',\n",
        "  'price': '$$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 610},\n",
-       " {'is_closed': False,\n",
-       "  'name': 'Salt And Board',\n",
+       " {'name': 'Salt And Board',\n",
        "  'price': '$$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 11},\n",
-       " {'is_closed': False,\n",
-       "  'name': 'Frontier Restaurant',\n",
+       " {'name': 'Frontier Restaurant',\n",
        "  'price': '$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
-       " {'is_closed': False,\n",
-       "  'name': 'Nexus Brewery',\n",
+       " {'name': 'Nexus Brewery',\n",
        "  'price': '$$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 680},\n",
-       " {'is_closed': False,\n",
-       "  'name': \"Devon's Pop Smoke\",\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
        "  'price': '$$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'is_closed': True,\n",
-       "  'name': 'Cocina Azul',\n",
+       " {'name': 'Cocina Azul',\n",
        "  'price': '$$',\n",
+       "  'is_closed': True,\n",
        "  'review_count': 647},\n",
-       " {'is_closed': False,\n",
-       "  'name': 'Philly Steaks',\n",
+       " {'name': 'Philly Steaks',\n",
        "  'price': '$$',\n",
+       "  'is_closed': False,\n",
        "  'review_count': 25},\n",
-       " {'is_closed': True,\n",
-       "  'name': 'Stripes Biscuit',\n",
+       " {'name': 'Stripes Biscuit',\n",
        "  'price': '$$',\n",
+       "  'is_closed': True,\n",
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "restaurants"
+    "restaurants[0:len(restaurants)]"
    ]
   },
   {
@@ -122,11 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig'},\n",
+       " {'name': 'Salt And Board'},\n",
+       " {'name': 'Frontier Restaurant'},\n",
+       " {'name': 'Nexus Brewery'},\n",
+       " {'name': \"Devon's Pop Smoke\"},\n",
+       " {'name': 'Cocina Azul'},\n",
+       " {'name': 'Philly Steaks'},\n",
+       " {'name': 'Stripes Biscuit'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names = None\n",
+    "names = list(map(lambda restaurant: dict(name=restaurant['name']), yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
@@ -147,11 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'review': 610},\n",
+       " {'review': 11},\n",
+       " {'review': 1373},\n",
+       " {'review': 680},\n",
+       " {'review': 54},\n",
+       " {'review': 647},\n",
+       " {'review': 25},\n",
+       " {'review': 20}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "review_counts = None\n",
+    "review_counts = list(map(lambda restaurant: dict(review=restaurant['review_count']), yelp_restaurants))\n",
+    "\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
@@ -164,11 +211,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-69e690858a3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mreview_counts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mrestaurant\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreview\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'review_count'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myelp_restaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtotal_reviews\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreview_counts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mtotal_reviews\u001b[0m \u001b[0;31m# 3420\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "total_reviews = None\n",
+    "review_counts = list(map(lambda restaurant: dict(review=restaurant['review_count']), yelp_restaurants))\n",
+    "\n",
+    "total_reviews = map(x + y, review_counts)\n",
     "total_reviews # 3420"
    ]
   },
