--- a/index.ipynb
+++ b/index.ipynb
@@ -132,29 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Fork & Fig'},\n",
-       " {'name': 'Salt And Board'},\n",
-       " {'name': 'Frontier Restaurant'},\n",
-       " {'name': 'Nexus Brewery'},\n",
-       " {'name': \"Devon's Pop Smoke\"},\n",
-       " {'name': 'Cocina Azul'},\n",
-       " {'name': 'Philly Steaks'},\n",
-       " {'name': 'Stripes Biscuit'}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "names = list(map(lambda restaurant: (name=restaurant['name']), yelp_restaurants))\n",
+    "names = list(map(lambda restaurant: restaurant['name']), yelp_restaurants)\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
