--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lambda restaurant: dict(review=restaurant['review_count']), yelp_restaurants))\n",
+    "review_counts = list(map(lambda restaurant: (review=restaurant['review_count']), yelp_restaurants))\n",
     "\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
