--- a/index.ipynb
+++ b/index.ipynb
@@ -175,29 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'review': 610},\n",
-       " {'review': 11},\n",
-       " {'review': 1373},\n",
-       " {'review': 680},\n",
-       " {'review': 54},\n",
-       " {'review': 647},\n",
-       " {'review': 25},\n",
-       " {'review': 20}]"
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = list(map(lambda restaurant: (review=restaurant['review_count']), yelp_restaurants))\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'], yelp_restaurants))\n",
     "\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
