automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    ],
    "source": [
     "\n",
-    "total_reviews = map(x + y, review_counts)\n",
+    "total_reviews = map(lambda x + y, review_counts)\n",
     "total_reviews # 3420"
    ]
   },
