--- a/index.ipynb
+++ b/index.ipynb
@@ -204,22 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-a8d07f4234a5>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-a8d07f4234a5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    total_reviews = map(lambda (x,y): x + y, review_counts)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<map at 0x7f6629fbf1d0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "total_reviews = map(lambda (x,y): x + y, review_counts)\n",
-    "total_reviews # 3420"
+    "total_reviews = map(lambda x,y: x + y, review_counts)\n",
+    "int(total_reviews # 3420"
    ]
   },
   {
