automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "\n",
     "total_reviews = map(lambda x,y: x + y, review_counts)\n",
-    "total_reviews.value() # 3420"
+    "type(total_reviews # 3420"
    ]
   },
   {
