automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,9 +241,8 @@
    ],
    "source": [
     "\n",
-    "total_reviews = map(lambda x,y: x + y, review_counts)\n",
-    "type(total_reviews) # 3420\n",
-    "help(map)"
+    "total_reviews = map(lambda x,y: x + y, review_counts).reduce\n",
+    "type(total_reviews) # 3420"
    ]
   },
   {
