--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -148,13 +148,13 @@
        " 'Stripes Biscuit']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = list(map(lambda restaurant: restaurant['name'], yelp_restaurants))\n",
+    "names = list(map(lambda restaurant: restaurant['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
