automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +184,13 @@
        "[610, 11, 1373, 680, 54, 647, 25, 20]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = list(map(lambda restaurant: restaurant['review_count'], yelp_restaurants))\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'], restaurants))\n",
     "\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
