automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,24 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "map"
+       "3420"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "total_reviews = map(lambda x,y: x + y, review_counts)\n",
-    "type(total_reviews) # 3420"
+    "total_reviews = 0\n",
+    "for review_count in review_counts:\n",
+    "    total_reviews += review_count\n",
+    "total_reviews # 3420"
    ]
   },
   {
