--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    "
+    "    list(map(lambda restaurant: restaurant['review_count'], restaurants))"
    ]
   },
   {
