--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(lambda restaurant: restaurant['is_closed'], restaurants))"
+    "    list(map(lambda restaurant: ifrestaurant['is_closed'], restaurants))"
    ]
   },
   {
