--- a/index.ipynb
+++ b/index.ipynb
@@ -369,12 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-c7b0fe18c558>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-c7b0fe18c558>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda restaurant: if restaurant['is_closed'] == False: restaurant, restaurants))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(lambda restaurant: if restaurant['is_closed'] == False: restaur, restaurants))"
+    "    list(map(lambda restaurant: if restaurant['is_closed'] == False: restaurant, restaurants))"
    ]
   },
   {
