--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(lambda restaurant: NOT restaurant['is_closed'] == False: restaurant, restaurants))"
+    "    list(map(lambda restaurant: not restaurant['is_closed'] == False: restaurant, restaurants))"
    ]
   },
   {
