automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,21 +369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-c7b0fe18c558>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-c7b0fe18c558>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda restaurant: if restaurant['is_closed'] == False: restaurant, restaurants))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(lambda restaurant: not restaurant['is_closed'], restaurants))"
+    "    list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
    ]
   },
   {
