--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
+    "        return list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))\n",
+    "\n",
+    "    return list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
    ]
   },
   {
