automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: not restaurant['pro'], restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'], restaurants))"
    ]
   },
   {
