automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,12 +444,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] > 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] < 1, restaurants))"
    ]
   },
   {
