--- a/index.ipynb
+++ b/index.ipynb
@@ -444,17 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] = 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -462,10 +462,13 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
