--- a/index.ipynb
+++ b/index.ipynb
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +455,7 @@
        "  'review_count': 1373}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
